--- a/index.html
+++ b/index.html
@@ -178,7 +178,9 @@
               <input type="file" accept=".jpg, .jpeg, .png" multiple id="images" name="images" class="ad-form__input visually-hidden">
               <label for="images" class="ad-form__drop-zone">Загрузить<br>фото...</label>
             </div>
-            <div class="ad-form__photo"></div>
+            <div class="ad-form__photo" style="display: flex">
+              <img src="img/muffin-grey.svg" alt="Фотография жилья" width="40" height="44" style="margin: auto">
+            </div>
           </div>
         </fieldset>
         <fieldset class="ad-form__element ad-form__element--submit">
@@ -256,6 +258,7 @@
 <script src="js/form.js"></script>
 <script src="js/map.js"></script>
 <script src="js/drag.js"></script>
+<script src="js/avatar.js"></script>
 <script src="js/main.js"></script>
 </body>
 </html>
